# attribu-logistics

./: .dockerignore  .env.docker  .env.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  SALES.md  TODO.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  gunicorn.conf.py  main.py  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci-cd.yml  ghcr-cleanup.yml
apps/core/: admin.py  admin_dashboard.py  sitemaps.py  tests.py  urls.py  views.py
apps/core/templates/core/: index.html
apps/dispatch/: apps.py
apps/waitlist/: admin.py  apps.py  models.py  tasks.py  tests.py  urls.py  views.py
apps/waitlist/migrations/: 0001_initial.py  0002_create_waitlist_manager_group.py
config/: __init__.py  celery.py  urls.py
config/settings/: base.py  docker_local.py  local.py  production.py  test.py
context/: CONTEXT.md  PILOT.md  SALES.md  TODO.md
docs/: deployment.md  docker-setup.md
nginx/: nginx.conf
nginx/conf.d/: app.conf
scripts/: pre-commit.sh  setup-ssl.sh
static/core/css/: landing.css
static/core/js/: landing-map.js  waitlist-form.js
templates/: base.html  robots.txt
templates/admin/: index.html
